%% Practice language — class diagram for keleo-studio JSON (`language.schema.json`).
%%
%% Legend:
%% *-- composition: child is embedded / owned by the parent aggregate (same JSON document subtree).
%% o-- aggregation: parent lists element ids or symbolic refs (lifecycle may extend beyond this slice).
%% --> association: navigable symbolic link (STRING foreign keys); edge labels show JSON field names.
%% Cardinality uses "1" | "0..1" | "*" | "0..*" | "1..*" on each connector side.
%%
%% Naming: `*Name` / `*Names` fields are STRING (or List~STRING~) keys; edges name the semantic target type, not embedded objects.

classDiagram
    %% -------------------------------------------------------------------------
    %% Tags (optional on every PracticeElement)
    %% -------------------------------------------------------------------------
    class TagsClassification {
        +domainTags: List~STRING~
        +lifecycleTags: List~STRING~
        +organizationalTags: List~STRING~
    }

    class PracticeElement {
        +name: STRING
        +description: STRING
    }

    PracticeElement "0..1" *-- "0..1" TagsClassification : tags
    PracticeElement "0..1" *-- "0..*" Narrative : narratives
    note for PracticeElement "tags optional: omit entirely, OR structured TagsClassification, OR legacy List~STRING~ (interchange; maps to lifecycleTags in tooling). Optional narrative breakdown on any element: 0..* embedded Narratives (composition); interchange field commonly `narratives`."

    class PracticeElementAlias {
        +practiceElementType: STRING
        +practiceElementName: STRING
        +aliasName: STRING
    }

    note for PracticeElementAlias "Maps aliasName → (practiceElementType, practiceElementName) in the same Practice. 0..* on Practice (practiceElementAliases)."

    %% -------------------------------------------------------------------------
    %% Document roots
    %% -------------------------------------------------------------------------
    class PracticeBaseline {
        +authors: List~STRING~
        +createdAt: DATE
        +updatedAt: DATE
        +version: STRING
        +keywords: List~STRING~
    }

    class Practice {
        +baselinePracticeName: STRING
        +practiceDependencyNames: List~STRING~
        +practiceElementAliases: List~PracticeElementAlias~
    }

    class Method {
    }

    note for Practice "Names a baseline (baselinePracticeName); may embed baseline-shaped arrays (focuses, alphas, …) as 0..* overlays. Required: baselinePracticeName only."
    note for PracticeBaseline "Full baseline aggregate: requires focuses, alphas, activitySpaces, competencies, authors, createdAt, updatedAt, version, keywords."
    note for Method "Root: baselinePractice embeds PracticeBaseline; optional practices[]."

    %% -------------------------------------------------------------------------
    %% Value stream & work
    %% -------------------------------------------------------------------------
    class Focus {
    }

    class Alpha {
        +focusName: STRING
        +contributesTo: STRING
        +supportingAlphas: List~STRING~
    }

    note for Alpha "contributesTo 0..1 (parent alpha name). supportingAlphas 0..* (child / contributor alpha names); unioned when merging practices."

    class State {
        +seq: INT
    }

    class Checklist {
        +seq: INT
        +verificationMethod: STRING
        +evidencedBy: List~WorkProductContribution~
    }

    class ActivitySpace {
        +focusName: STRING
        +requiredCompetencies: List~STRING~
        +involves: List~STRING~
    }

    note for ActivitySpace "involves: 0..* symbolic links; each STRING must match PersonaGroup.name in the same Practice overlay (or merged method scope), not Persona.name and not entries inside PersonaGroup.personaNames."

    class Activity {
        +activitySpaceName: STRING
    }

    note for Activity "When nested under ActivitySpace.activities, activitySpaceName may be omitted (implicit parent). Flat Practice.activities remains valid legacy interchange."

    class WorkProduct {
    }

    class LevelOfDetail {
        +seq: INT
    }

    %% -------------------------------------------------------------------------
    %% Competency & patterns
    %% -------------------------------------------------------------------------
    class Competency {
    }

    class CompetencyLevel {
        +level: INT
    }

    class Persona {
    }

    Persona "0..1" *-- "0..*" CompetencyLevelReference : competencies

    class PersonaGroup {
        +personaNames: List~STRING~
    }
    
    PracticeElement <|-- PersonaGroup
    PracticeElement <|-- Persona 


    class Pattern {
        +narrativeTypeName: STRING
    }

    class PatternView {
        +seq: INT
        +narrativeElementName: STRING
    }

    note for PatternView "alphaStates: canonical List~AlphaContribution~; legacy documents may use STRING tokens (same semantics). alphaInstances: 0..* embedded AlphaInstance rows (expected instance outcomes). activitySpaces / activities: ActivitySpace.name and Activity.name refs as STRING lists."

    %% -------------------------------------------------------------------------
    %% Symbolic reference value objects (STRING keys only; not PracticeElement subclasses)
    %% -------------------------------------------------------------------------
    class AlphaContribution {
        +alphaName: STRING
        +stateName: STRING
    }

    class WorkProductContribution {
        +workProductName: STRING
        +levelOfDetailName: STRING
    }

    class CompetencyLevelReference {
        +competencyName: STRING
        +competencyLevelName: STRING
    }

    class PatternViewReference {
        +patternName: STRING
        +patternViewName: STRING
    }

    class AlphaInstance {
        +alphaName: STRING
        +stateName: STRING
        +evidenceBy: List~WorkProductInstance~
    }

    class AlphaInstanceName {
        +alphaName: STRING
    }

    class WorkProductInstanceName {
        +workProductName: STRING
    }

    class WorkProductInstance {
        +workProductName: STRING
        +levelOfDetailName: STRING
    }

    class NarrativeContext {
        +seq: INT
        +narrativeElementName: STRING
        +context: STRING
    }

    class Narrative {
        +narrativeTypeName: STRING
        +narrativeContexts: List~NarrativeContext~
    }

    PracticeElement <|-- Narrative

    class NarrativeType {
        +name: STRING
        +description: STRING
        +narrativeElements: List~NarrativeElement~
    }

    PracticeElement <|-- NarrativeType

    class NarrativeElement {
        +name: STRING
        +description: STRING
        +howToUse: STRING
    }

    PracticeElement <|-- NarrativeElement
    NarrativeType "1" *-- "0..*" NarrativeElement : narrativeElements

    %% -------------------------------------------------------------------------
    %% Composition & aggregation (JSON shape)
    %% -------------------------------------------------------------------------
    ActivitySpace "1" *-- "0..*" Activity : activities
    ActivitySpace "1" *-- "1..*" AlphaContribution : contributesTo
    Alpha "1" *-- "3..*" State : states
    Alpha "1" o-- "0..*" STRING : supportingAlphas
    Competency "1" *-- "1..*" CompetencyLevel : levels
    LevelOfDetail "1" *-- "0..*" Checklist : checklist
    LevelOfDetail "1" *-- "1..*" AlphaContribution : contributesTo
    Method "1" --> "1" PracticeBaseline : baselinePractice
    Method "1" o-- "0..*" Practice : practices
    Pattern "1" *-- "1..*" PatternView : patternViews
    PatternView "1" *-- "0..*" AlphaContribution : alphaStates
    PatternView "1" *-- "0..*" AlphaInstance : alphaInstances
    AlphaInstance "1" *-- "0..*" WorkProductInstance : evidenceBy
    Practice "1" o-- "0..*" Activity : activities
    Practice "1" o-- "0..*" Pattern : patterns
    Practice "1" o-- "0..*" PracticeElementAlias : practiceElementAliases
    Practice "1" o-- "0..*" AlphaInstanceName : alphaInstances
    Practice "1" o-- "0..*" WorkProductInstanceName : workProductInstances
    Practice "1" o-- "0..*" WorkProduct : workProducts
    Practice "1" o-- "0..*" Persona : personas
    Practice "1" o-- "0..*" PersonaGroup : personaGroups
    
    PracticeBaseline "1" *-- "0..*" ActivitySpace : activitySpaces
    PracticeBaseline "1" *-- "0..*" Alpha : alphas
    PracticeBaseline "1" *-- "0..*" Competency : competencies
    PracticeBaseline "1" *-- "0..*" Focus : focuses
    PracticeBaseline "1" *-- "0..*" NarrativeType : narrativeTypes
    
    State "1" *-- "0..*" Checklist : checklist
    
    WorkProduct "1" *-- "2..*" LevelOfDetail : levelsOfDetail

    Activity "1" *-- "0..*" AlphaContribution : contributesTo
    Activity "1" o-- "0..*" CompetencyLevelReference : recommendedCompetencyLevels
    Activity "1" o-- "0..*" WorkProductContribution : worksOn

    %% -------------------------------------------------------------------------
    %% Symbolic STRING associations (targets named elsewhere in baseline / practice)
    %% -------------------------------------------------------------------------
    Activity "1" --> "1" ActivitySpace : activitySpaceName
    ActivitySpace "1" --> "0..*" Competency : requiredCompetencies
    ActivitySpace "1" --> "0..*" PersonaGroup : involves
    AlphaContribution "1" --> "1" Alpha : alphaName
    AlphaContribution "1" --> "1" State : stateName
    AlphaInstance "1" --> "1" Alpha : alphaName
    AlphaInstance "1" --> "1" State : stateName
    AlphaInstanceName "1" --> "1" Alpha : alphaName
    WorkProductInstanceName "1" --> "1" WorkProduct : workProductName
    Alpha "1" --> "0..1" Alpha : contributesTo
    Alpha "1" --> "1" Focus : focusName
    ActivitySpace "1" --> "1" Focus : focusName
    Activity "1" --> "1" Focus : focusName
    CompetencyLevel "1" --> "1" Competency : competencyName
    CompetencyLevelReference "1" --> "1" Competency : competencyName
    CompetencyLevelReference "1" --> "1" CompetencyLevel : competencyLevelName
    PatternViewReference "1" --> "1" Pattern : patternName
    PatternViewReference "1" --> "1" PatternView : patternViewName
    Practice "1" --> "1" PracticeBaseline : baselinePracticeName
    Practice "1" o-- "0..*" Practice : practiceDependencyNames
    WorkProductContribution "1" --> "1" LevelOfDetail : levelOfDetailName
    WorkProductContribution "1" --> "1" WorkProduct : workProductName
    WorkProductInstance "1" --> "1" LevelOfDetail : levelOfDetailName
    WorkProductInstance "1" --> "1" WorkProduct : workProductName
    PatternView "1" --> "0..*" STRING : activitySpaces
    PatternView "1" --> "0..*" STRING : activities
    Pattern "1" --> "1" NarrativeType : narrativeTypeName
    PatternView "1" --> "0..1" NarrativeElement : narrativeElementName
    Narrative "1" --> "1" NarrativeType : narrativeTypeName
    NarrativeContext "1" --> "1" NarrativeElement : narrativeElementName

    %% Resolution notes:
    %% stateName (+ alphaName) → State under that Alpha.
    %% levelOfDetailName (+ workProductName) → LevelOfDetail under that WorkProduct.
    %% competencyLevelName (+ competencyName) → CompetencyLevel.name under that Competency.
    %% patternViewName (+ patternName) → PatternView.name under that Pattern.
    %% narrativeTypeName → NarrativeType.name in the baseline (or practice overlay embedding narrativeTypes).
    %% narrativeElementName → NarrativeElement.name defined on that NarrativeType (within the patterned narrative spine).
    %% involves → PersonaGroup.name in the same practice aggregate (extension overlay or merged composite); not Persona.name.

    %% -------------------------------------------------------------------------
    %% Inheritance (PracticeElement subclasses)
    %% -------------------------------------------------------------------------
    PracticeBaseline <|-- Practice
    PracticeElement <|-- Activity
    PracticeElement <|-- ActivitySpace
    PracticeElement <|-- Alpha
    PracticeElement <|-- AlphaInstance
    PracticeElement <|-- AlphaInstanceName
    PracticeElement <|-- Checklist
    PracticeElement <|-- Competency
    PracticeElement <|-- CompetencyLevel
    PracticeElement <|-- Focus
    PracticeElement <|-- LevelOfDetail
    PracticeElement <|-- Method
    PracticeElement <|-- Pattern
    PracticeElement <|-- PatternView
    PracticeElement <|-- PracticeBaseline
    PracticeElement <|-- State
    PracticeElement <|-- WorkProduct
    PracticeElement <|-- WorkProductInstance
    PracticeElement <|-- WorkProductInstanceName
